// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CurrencyInput > Styles > should render a currency as a prefix 1`] = `
.circuit-0 {
  position: relative;
}

.circuit-1 {
  line-height: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  position: absolute;
  pointer-events: none;
  color: var(--cui-fg-subtle);
  padding: 12px 16px;
  height: 48px;
  width: 48px;
}

.circuit-2 {
  font-size: 1rem;
  line-height: 1.5rem;
  -webkit-appearance: none;
  background-color: var(--cui-bg-normal);
  border: none;
  outline: 0;
  border-radius: 8px;
  padding: 12px 16px;
  -webkit-transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  width: 100%;
  margin: 0;
  text-align: right;
  padding-left: 48px;
  box-shadow: 0 0 0 1px var(--cui-border-normal);
}

.circuit-2::-webkit-input-placeholder {
  color: var(--cui-fg-placeholder);
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-2::-moz-placeholder {
  color: var(--cui-fg-placeholder);
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-2:-ms-input-placeholder {
  color: var(--cui-fg-placeholder);
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-2::placeholder {
  color: var(--cui-fg-placeholder);
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-2:disabled,
.circuit-2[disabled] {
  background-color: var(--cui-bg-normal-disabled);
}

.circuit-2:hover {
  box-shadow: 0 0 0 1px var(--cui-border-normal-hovered);
}

.circuit-2:focus {
  box-shadow: 0 0 0 2px var(--cui-border-accent);
}

.circuit-2:active {
  box-shadow: 0 0 0 1px var(--cui-border-accent);
}

<div>
  <div
    class="_wrapper_7cd753"
  >
    <label
      class="_label_7cd753"
      for=":r7:"
    >
      <span
        class="_label-text_7cd753"
      >
        Amount
      </span>
    </label>
    <div
      class="circuit-0"
    >
      <span
        class="circuit-1"
        id=":r6:"
      >
        CHF
      </span>
      <input
        aria-describedby=":r6: :r8:"
        class="circuit-2"
        id=":r7:"
        inputmode="decimal"
        type="text"
        value=""
      />
    </div>
    <span
      aria-live="polite"
      role="status"
    />
  </div>
</div>
`;

exports[`CurrencyInput > Styles > should render a currency as a suffix 1`] = `
.circuit-0 {
  position: relative;
}

.circuit-1 {
  font-size: 1rem;
  line-height: 1.5rem;
  -webkit-appearance: none;
  background-color: var(--cui-bg-normal);
  border: none;
  outline: 0;
  border-radius: 8px;
  padding: 12px 16px;
  -webkit-transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  width: 100%;
  margin: 0;
  text-align: right;
  padding-right: 48px;
  box-shadow: 0 0 0 1px var(--cui-border-normal);
}

.circuit-1::-webkit-input-placeholder {
  color: var(--cui-fg-placeholder);
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-1::-moz-placeholder {
  color: var(--cui-fg-placeholder);
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-1:-ms-input-placeholder {
  color: var(--cui-fg-placeholder);
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-1::placeholder {
  color: var(--cui-fg-placeholder);
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-1:disabled,
.circuit-1[disabled] {
  background-color: var(--cui-bg-normal-disabled);
}

.circuit-1:hover {
  box-shadow: 0 0 0 1px var(--cui-border-normal-hovered);
}

.circuit-1:focus {
  box-shadow: 0 0 0 2px var(--cui-border-accent);
}

.circuit-1:active {
  box-shadow: 0 0 0 1px var(--cui-border-accent);
}

.circuit-2 {
  line-height: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  position: absolute;
  top: 0;
  right: 0;
  pointer-events: none;
  color: var(--cui-fg-subtle);
  padding: 12px 16px;
  height: 48px;
  width: 48px;
  -webkit-transition: right 120ms ease-in-out;
  transition: right 120ms ease-in-out;
}

<div>
  <div
    class="_wrapper_7cd753"
  >
    <label
      class="_label_7cd753"
      for=":r4:"
    >
      <span
        class="_label-text_7cd753"
      >
        Amount
      </span>
    </label>
    <div
      class="circuit-0"
    >
      <input
        aria-describedby=":r3: :r5:"
        class="circuit-1"
        id=":r4:"
        inputmode="decimal"
        type="text"
        value=""
      />
      <span
        class="circuit-2"
        id=":r3:"
      >
        €
      </span>
    </div>
    <span
      aria-live="polite"
      role="status"
    />
  </div>
</div>
`;

exports[`CurrencyInput > Styles > should render with default styles and format 1`] = `
.circuit-0 {
  position: relative;
}

.circuit-1 {
  line-height: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  position: absolute;
  pointer-events: none;
  color: var(--cui-fg-subtle);
  padding: 12px 16px;
  height: 48px;
  width: 48px;
}

.circuit-2 {
  font-size: 1rem;
  line-height: 1.5rem;
  -webkit-appearance: none;
  background-color: var(--cui-bg-normal);
  border: none;
  outline: 0;
  border-radius: 8px;
  padding: 12px 16px;
  -webkit-transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  width: 100%;
  margin: 0;
  text-align: right;
  padding-left: 48px;
  box-shadow: 0 0 0 1px var(--cui-border-normal);
}

.circuit-2::-webkit-input-placeholder {
  color: var(--cui-fg-placeholder);
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-2::-moz-placeholder {
  color: var(--cui-fg-placeholder);
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-2:-ms-input-placeholder {
  color: var(--cui-fg-placeholder);
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-2::placeholder {
  color: var(--cui-fg-placeholder);
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-2:disabled,
.circuit-2[disabled] {
  background-color: var(--cui-bg-normal-disabled);
}

.circuit-2:hover {
  box-shadow: 0 0 0 1px var(--cui-border-normal-hovered);
}

.circuit-2:focus {
  box-shadow: 0 0 0 2px var(--cui-border-accent);
}

.circuit-2:active {
  box-shadow: 0 0 0 1px var(--cui-border-accent);
}

<div>
  <div
    class="_wrapper_7cd753"
  >
    <label
      class="_label_7cd753"
      for=":r1:"
    >
      <span
        class="_label-text_7cd753"
      >
        Amount
      </span>
    </label>
    <div
      class="circuit-0"
    >
      <span
        class="circuit-1"
        id=":r0:"
      >
        $
      </span>
      <input
        aria-describedby=":r0: :r2:"
        class="circuit-2"
        id=":r1:"
        inputmode="decimal"
        type="text"
        value=""
      />
    </div>
    <span
      aria-live="polite"
      role="status"
    />
  </div>
</div>
`;
